--- a/index.html
+++ b/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Travel Agency Page</title>
+    <meta name="description" content="Travel agency to make your life easier" />
+  </head>
+  <body>
+    <section>
+      <h1>Discover Bangladesh</h1>
+      <p>
+        Bangladeshis are renowned for their hospitality and warmth – they’ll
+        invite you home and treat you to their delectable cuisine. They are
+        passionate about food, football, cricket, theatre and music – and if
+        you’re wondering about the strange combination, their social ambit is
+        wide and they are a broad-minded nation. Bangladesh is among the few
+        Asian nations where religions coexist in harmony. However, don’t be
+        fooled by the smooth and urbane capital city, Dhaka – the smaller cities
+        and villages are simple and well behind modern times.
+      </p>
+    </section>
+    <section>
+      <h2>Packages</h2>
+      <p>
+        Have a dream destination in mind? Whether you want to follow your
+        appetite to Tuscany or go wild in America’s greatest national parks, our
+        guided tour packages will get you there.
+      </p>
+      <ul>
+        <li>Group Travels</li>
+        <li>Private Tours</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Top Itineraries</h2>
+      <figure>
+        <a href="https://en.wikipedia.org/wiki/Cox%27s_Bazar"
+          ><img src="./images/coxs.jpg" alt="coxs bazar"
+        /></a>
+        <figcaption>Cox's Bazar</figcaption>
+      </figure>
+      <figure>
+        <a href="https://en.wikipedia.org/wiki/St._Martin%27s_Island"
+          ><img src="./images/saint.jpg" alt="saint martin"
+        /></a>
+        <figcaption>Saint Martin</figcaption>
+      </figure>
+      <figure>
+        <a href="https://en.wikipedia.org/wiki/Sundarbans"
+          ><img src="./images/sundarban.png" alt="sundarban"
+        /></a>
+        <figcaption>Sundarban</figcaption>
+      </figure>
+    </section>
+  </body>
 </html>
